--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
+		"module": "es2022",
 		"esModuleInterop": true,
 		"lib": ["ESNext"],
-		"target": "es6",
+		"target": "es2017",
 		"moduleResolution": "node",
 		"sourceMap": true,
 		"outDir": "dist",
