--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase-admin": "^11.5.0",
     "mongoose": "^8.8.1",
     "node-cron": "^3.0.2",
+    "openai": "^4.72.0",
     "socket.io": "^4.8.1",
     "uuid": "^9.0.0",
     "zod": "^3.23.8"
