--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
 	"explorer.fileNesting.enabled": true,
 	"explorer.fileNesting.expand": false,
 	"explorer.fileNesting.patterns": {
-		"package.json": "README.md,bun.lockb,package-lock.json,.eslintrc.json,.eslintrc.js,.prettierrc,tsconfig.json,.gitignore,firebase.json,credentials*.json",
+		"package.json": "README.md,bun.lockb,package-lock.json,.eslintrc.json,.eslintrc.js,.prettierrc,tsconfig.json,.gitignore,Makefile,firebase.json,credentials*.json",
 		"*.tsx": "$(capture).bloc.ts,$(capture).test.tsx,$(capture).css,$(capture).scss",
 		"main.tsx": "*env.d.ts,reportWebVitals.ts,setupTests.ts",
 		"firebase.json": ".firebaserc,firestore.rules,firestore.indexes.json,database.rules.json,storage.rules"
